--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/locationView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Location: "
@@ -20,17 +20,9 @@
         android:id="@+id/receiveLocationUpdatesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Receiving Location"
+        android:text="@string/start_receiving_location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView" />
-
-    <Button
-        android:id="@+id/stopBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/receiveLocationUpdatesBtn"
-        android:text="Stop"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/locationView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
