add recycler view to display list of students

--- a/app/src/main/res/layout/fragment_connect_to_friend.xml
+++ b/app/src/main/res/layout/fragment_connect_to_friend.xml
@@ -13,8 +13,9 @@
         android:textAlignment="center"/>
 
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/availableUsersRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
