--- a/app/src/main/res/layout/available_user_view_holder.xml
+++ b/app/src/main/res/layout/available_user_view_holder.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/userAvatar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_man_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLength="10"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/userAvatar"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,18 +31,19 @@
         android:id="@+id/userId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:maxLength="10"
         app:layout_constraintStart_toStartOf="@id/usernameTextView"
         app:layout_constraintTop_toBottomOf="@id/usernameTextView"
         tools:text="123erwerfsdsdfsdf" />
 
     <Button
         android:id="@+id/shareLocationButton"
-        android:layout_width="90dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Share"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
