--- a/app/src/main/res/navigation/distance_nav_graph.xml
+++ b/app/src/main/res/navigation/distance_nav_graph.xml
@@ -7,10 +7,21 @@
     <fragment
         android:id="@+id/homeScreenFragment"
         android:name="com.robosh.distancebetween.homescreen.view.HomeScreenFragment"
-        android:label="HomeScreenFragment" >
+        android:label="HomeScreenFragment">
         <action
             android:id="@+id/action_homeScreenFragment_to_connectToFriendFragment"
-            app:destination="@id/connectToFriendFragment" />
+            app:destination="@id/connectToFriendFragment"
+            app:enterAnim="@anim/slide_in_to_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right" />
+        <action
+            android:id="@+id/action_homeScreenFragment_to_waitForFriendFragment"
+            app:destination="@id/waitForFriendFragment"
+            app:enterAnim="@anim/slide_in_to_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right" />
     </fragment>
 
     <fragment
@@ -18,13 +29,21 @@
         android:name="com.robosh.distancebetween.saveuser.view.SaveUserFragment"
         android:label="SaveUserFragment">
         <action
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/saveUserFragment"
             android:id="@+id/action_saveUserFragment_to_homeScreenFragment"
-            app:destination="@id/homeScreenFragment" />
+            app:destination="@id/homeScreenFragment"
+            app:enterAnim="@anim/slide_in_to_right"
+            app:exitAnim="@anim/slide_out_to_left"
+            app:popEnterAnim="@anim/slide_in_from_left"
+            app:popExitAnim="@anim/slide_out_to_right"
+            app:popUpTo="@id/saveUserFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/connectToFriendFragment"
         android:name="com.robosh.distancebetween.connectfriend.view.ConnectToFriendFragment"
         android:label="ConnectToFriendFragment" />
+    <fragment
+        android:id="@+id/waitForFriendFragment"
+        android:name="com.robosh.distancebetween.waitfriend.view.WaitForFriendFragment"
+        android:label="WaitForFriendFragment" />
 </navigation>
