create dialog for connection with friend

--- a/app/src/main/res/layout/fragment_wait_for_friend.xml
+++ b/app/src/main/res/layout/fragment_wait_for_friend.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -10,5 +11,11 @@
         android:text="Just waiting for friend :)"
         android:textAlignment="center"
         android:textSize="25sp" />
+
+    <Button
+        android:id="@+id/showDialogTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show dialog test" />
 
 </LinearLayout>
