add a new screen

--- a/app/src/main/res/layout/fragment_connect_to_friend.xml
+++ b/app/src/main/res/layout/fragment_connect_to_friend.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -16,6 +17,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/availableUsersRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/available_user_view_holder"/>
 
 </LinearLayout>
