--- a/app/src/main/res/layout/fragment_save_user.xml
+++ b/app/src/main/res/layout/fragment_save_user.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -24,5 +24,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/save_username_text" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:progressDrawable="@drawable/circular_progress_bar" />
 
 </LinearLayout>
