--- a/app/src/main/res/layout/available_user_view_holder.xml
+++ b/app/src/main/res/layout/available_user_view_holder.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="@dimen/standard_margin"
     android:background="@drawable/layout_border"
-    android:padding="20dp">
+    android:padding="@dimen/standard_margin">
 
     <ImageView
         android:id="@+id/userAvatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
         android:src="@drawable/ic_man_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLength="10"
-        android:textSize="20sp"
+        android:textSize="@dimen/xtext_size"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/userAvatar"
         app:layout_constraintTop_toTopOf="parent"
@@ -40,10 +40,10 @@
         android:id="@+id/shareLocationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Share"
-        android:textSize="20sp"
+        android:text="@string/share_button"
+        android:textSize="@dimen/xtext_size"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
