--- a/app/src/main/res/layout/available_user_view_holder.xml
+++ b/app/src/main/res/layout/available_user_view_holder.xml
@@ -14,7 +14,8 @@
         android:layout_height="@dimen/icon_size"
         android:src="@drawable/ic_man_user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/usernameTextView"
