--- a/app/src/main/res/layout/dialog_accept_connection.xml
+++ b/app/src/main/res/layout/dialog_accept_connection.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:padding="@dimen/standard_margin">
 
     <TextView
         android:id="@+id/usernameDialogTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="@dimen/xtext_size"
         android:textStyle="bold"
         tools:text="Petro wants to share location with you!" />
 
