--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="xxmargin_size">50dp</dimen>
     <dimen name="small_margin">10dp</dimen>
     <dimen name="widget_icon_size">80dp</dimen>
+    <dimen name="divider_size">1dp</dimen>
 </resources>
