--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="small_margin">10dp</dimen>
     <dimen name="widget_icon_size">80dp</dimen>
     <dimen name="divider_size">1dp</dimen>
+    <dimen name="progress_bar_size">80dp</dimen>
 </resources>
