--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -77,6 +77,8 @@
             app:enterAnim="@anim/slide_in_to_right"
             app:exitAnim="@anim/slide_out_to_left"
             app:popEnterAnim="@anim/slide_in_from_left"
-            app:popExitAnim="@anim/slide_out_to_right" />
+            app:popExitAnim="@anim/slide_out_to_right"
+            app:popUpTo="@+id/saveUserFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
